  - To reopen a group use the "Open Saved Session or groups" toolbar button or Session menu.
  - Note: The "Save/manage group of saved Session" dialog offers an optimization
    which allows to save all open Sessions by using the ctrl+alt+shift+m shortcut to open the dialog
    and then hitting enter to save or GIT commit.

SQL editor's right mouse menu offers to execute SQLs.

Bug fixes:

SQL result search function: Moving search results to an own table window didn't work when the result table was sorted.

Copying from table cell data popup was not added to paste history (ctrl+shift+v or ctrl+shift+insert).

Tools popup (ctrl+t) was broken by too long description.

Saved Session groups, several bug fixes:
  When group members were moved to a standalone Saved Session their internally saved SQL files were lost.
  When group members were moved to a standalone Saved Session SQuirreL's title bar wasn't updated.
  When group members were moved to a standalone Saved Session a wrong Saved Session exist warning was shown.
  Extended several tool tips concerning Saved Sessions and groups.

#1528 When users changed a Session tab's name and switched to another catalog the changes were lost.

Look and feel plugin: When SQuirreL was installed into an empty directory
  loading the FlatLaf Look and Feel raised a ClassNotFoundException. In consequence SQuirreL's dark theme did not work.
  Additionally FlatLaf was upgraded to version 3.4.1.

Saved Sessions and groups: The "Open / manage ..." dialog's list did not repaint when a Session or group was renamed.

Saved Session groups: Deleting Sessions from groups did not work.
  It now works the same way as when a Saved Session of an open Session is deleted. I.e. all internal files are detached.

Editable cell data popup: When updating data fails with a "No rows updated" message box
  the message box was poorly positioned.

When new users with fresh installations close SQuirreL with an open Session